2007-06-26  Christian Schaller <christian@fluendo.com>

	* data/91-flumotion-device-policy.fdi: Add
	policy file for HAL correct set device access

2007-06-26  Andy Wingo  <wingo@pobox.com>

	* flumotion/manager/component.py (ComponentAvatar.getEaters):
	Return just the list of eater names.
	(ComponentAvatar.getFeedersForEater): New function, returns a list
	of remote feedIds to which an eater should connect.
	(ComponentAvatar.getFeeders, ComponentAvatar.getEatersForFeeder):
	Likewise for feeders, although getting eaters for feeders is more
	expensive. See #694.
	(ComponentHeaven._connectEaterUpstream)
	(ComponentHeaven._connectEaters)
	(ComponentHeaven._connectFeeders)
	(ComponentHeaven._connectFeederDownstream)
	(ComponentHeaven._startComponent): Break startComponent into its
	pieces. 
	(ComponentHeaven._setupComponent): Remove some now-unnecessary
	code.

	* flumotion/test/test_manager_manager.py
	(testComponentEatersEmpty): Remove test of removed internal method.

2007-06-26  Sebastien Merle  <sebastien@fluendo.com>

	* flumotion/twisted/flavors.py (StateRemoteCache._notifyListeners):
	None was used as logging category, and it's not supported.

2007-06-26  Christian Schaller <christian@fluendo.com>

	* data/flumotion-admin.desktop.in: Update Categories according to
	these instructions:
	http://live.gnome.org/GnomeGoals/ApplicationCategory
	correct set device access

2007-06-26  Andy Wingo  <wingo@pobox.com>

	* flumotion/test/test_component_feed.py (FeedTestCase): Split
	fixture out into base class.
	(TestUpstreamFeedClient): Rename from TestFeedClient so we can
	test downstream connections in a separate class.

	* flumotion/component/feedcomponent.py
	(FeedComponentMedium._getAuthenticatorForFeed): New helper.
	(FeedComponentMedium.connectEater): Attempt to identify ourself to
	the remote side with our fullFeedId, if possible.

	* flumotion/twisted/pb.py (RemoteAuthenticator.copy): New method,
	mostly useful if you want to log in with different avatarIds, as